# Aetna

./: .gitignore  CMakeLists.txt  MainScript.cpp  MainScript.h  main.cpp  project.aetna  scene_test.asc
3rd/pugixml/: pugixml.cpp  pugixml.hpp
assets/: project.asc
core/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h
core/dependencies/pugixml/include/: pugiconfig.hpp
core/framework/: Controls.cpp  Controls.h  Engine.cpp  Engine.h  Game.cpp  Game.h  Lights.h  Materials.h  Script.h  Texture.cpp  Utils.cpp  Utils.h
core/framework/input/: InputGLFW.cpp  InputGLFW.h  InputProxy.cpp  InputProxy.h
core/framework/objects/: Player.h  PlayerFree.cpp  PlayerFree.h
core/framework/render/: OpenGLRenderer.cpp  OpenGLRenderer.h  Renderer.h
core/framework/shader/: OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderProgram.cpp  OpenGLShaderProgram.h  Shader.h  ShaderProgram.h
core/framework/shader/default/: fragment.glsl  vertex.glsl
core/source/: CMakeLists.txt  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h
core/source/entities/: Entity.cpp  Entity.h  Lights.h
core/source/entities/objects/: Object.cpp  Object.h  Player.h  PlayerFree.cpp  PlayerFree.h
core/source/framework/: Application.cpp  Application.h  ApplicationGL.cpp  ApplicationGL.h  Camera.cpp  Camera.h  Engine.cpp  Engine.h  Game.cpp  Game.h  Materials.h
core/source/framework/input/: Controls.cpp  Controls.h
core/source/framework/input/raw/: InputGLFW.cpp  InputGLFW.h  InputProxy.cpp  InputProxy.h
core/source/framework/render/: OpenGLRenderer.cpp  OpenGLRenderer.h  Renderer.h
core/source/framework/render/shader/: OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderProgram.cpp  OpenGLShaderProgram.h  Shader.h  ShaderProgram.h
core/source/framework/render/shader/default/: fragment.glsl  v_framebuffer.glsl  vertex.glsl
core/source/materials/: base_material.mat  brick_material.mat  container2.mat  deferred_lighting.mat
core/source/materials/shaders/: composition_f.glsl  composition_v.glsl  deferred_lighting_f.glsl  deferred_lighting_v.glsl  fragment.glsl  gbuffer_f.glsl  gbuffer_v.glsl  skybox_f.glsl  skybox_v.glsl  vertex.glsl
dependencies/SOIL/lib/: SOIL.lib
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
materials/: base_material.mat
source/: CMakeLists.txt  MainScript.cpp  MainScript.h  main.cpp
